# rust-lang

hello_world/manning-stock-01/: Cargo.toml
hello_world/manning-stock-01/src/: main.rs
hello_world/myproject/: Cargo.toml
hello_world/myproject/src/: main.rs
hello_world/myproject2/: Cargo.toml
hello_world/myproject2/src/: main.rs
