[package]
name = "manning-stock-01"
version = "0.1.0"
authors = ["David Rinck <rinckd@atonix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = "3.0.0-beta.1"
yahoo_finance_api = {version = "1.0.2", features = ["blocking"]}
